# sxd-xpath-no-unsafe

./: Cargo.toml
.github/workflows/: ci.yml
evaluate/: Cargo.toml
evaluate/src/: main.rs
src/: axis.rs  context.rs  expression.rs  function.rs  lib.rs  node_test.rs  nodeset.rs  parser.rs  tokenizer.rs
tests/: integration.rs
