[package]
name = "sxd-xpath-nounsafe"
version = "0.5.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>", "Neil Soiffer <neil.soiffer@gmail.com"]
edition = "2018"

description = "A Rust XML XPath library"
readme = "README.md"
keywords = ["xml", "xpath"]

repository = "https://github.com/NSoiffer/sxd-xpath-no-unsafe"
documentation = "https://docs.rs/sxd-xpath/"

license = "MIT/Apache-2.0"

[features]
# Unused -- remove on next semver-imcompatible release
unstable = []

[dependencies]
peresil = "0.3.0"
sxd-document-no-unsafe = "0.4"
snafu = "0.5.0"
