[package]
name = "sxd-xpath-nounsafe"
version = "0.5.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>", "Neil Soiffer <neil.soiffer@gmail.com>"]
edition = "2018"

description = "A Rust XML XPath library"
readme = "README.md"
keywords = ["xml", "xpath"]

repository = "https://github.com/shepmaster/sxd-xpath"
documentation = "https://github.com/NSoiffer/sxd-xpath-no-unsafe"

license = "MIT/Apache-2.0"

[features]
# Unused -- remove on next semver-imcompatible release
unstable = []
# Enable sxd-document-no-unsafe's no-unsafe feature (guard types instead of unsafe transmute)
no-unsafe = ["sxd-document-no-unsafe/no-unsafe"]

[dependencies]
peresil = "0.3.0"
sxd-document-no-unsafe = { path = "../sxd-document", package = "sxd-document-no-unsafe" }
snafu = "0.5.0"
